# la-patate-chaude

./: .gitignore  COMMAND.md  Cargo.toml  FAQ.md  README.md  docker-compose.yml  md5-hashcash.md  monstrous-maze.md  nonogram-solver.md  recover_secret.md
.run/: Run client Clement.run.xml  Run client Paul.run.xml
archive-2022-11-07/x86_64-apple-darwin/: server  start_server
archive-2022-11-07/x86_64-unknown-linux-gnu/: start_server
client/: Cargo.toml  Dockerfile  Dockerfile_prod  RecoverSecretStruct.rs  app.rs  hashCash.rs  main.rs  recoverSecret.rs  recover_secret.rs
client/hashcash/: data_structures.rs  md5_hascash_challenge.rs  mod.rs  utils.rs
client/recover_secret/: mod.rs  recover_secret_challenge.rs
client/src/: client.rs  main.rs  message.rs  player_init.rs  server_communication.rs
client/src/challenge/: md5_hash_cash.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs  models_md5_hash_cash.rs  models_recover_secret.rs
common/src/challenge/: mod.rs  models_md5_hash_cash.rs  models_monstrous_maze.rs
data/: liste-mots-alphabetique.txt
distribution/macos/: server  start_server
libraries/messages/: Cargo.toml
libraries/messages/src/: lib.rs
server/: .dockerignore  Cargo.toml  Dockerfile  start_server
server/src/: main.rs
src/: challenge.rs  challenge_hash.rs  challenge_monstrous_maze.rs  client.rs  main.rs  message.rs  server.rs
src/recover_secret/: mod.rs  recover_secret_challenge.rs  utils.rs
subject/: README.md  monstrous-maze.md  recover_secret.md
subject/data/: README.md
tests/: challenge_rush_test.rs  test_recover_secret.rs
tests/recover_secret/: test_recover_secret.rs
