[package]
name = "la-patate-chaude"
version = "0.1.0"
authors = ["@soulte92", "@sarah-bouadi", "@cawa-dev"]

[[bin]]
name = "client"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/recover_secret/test_recover_secret.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
random-string = "1.0"