[package]
name = "la-patate-chaude"
version = "0.1.0"
authors = ["@soulte92", "@sarah-bouadi", "@cawa-dev"]

[[bin]]
name = "client"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/recover_secret/test_recover_secret.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
md5 = "0.7.0"
hex = "0.4.2"
data-encoding = "2.3.3"
rayon = "1.5.3"
num_cpus = "1.13.1"